syntax = "proto3";

package plugin;

option go_package = "github.com/mantonx/viewra/pkg/plugins/proto";

// Plugin service - core interface all plugins must implement
service PluginService {
  rpc Initialize(InitializeRequest) returns (InitializeResponse);
  rpc Start(StartRequest) returns (StartResponse);
  rpc Stop(StopRequest) returns (StopResponse);
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}

// Metadata scraper service for plugins that extract metadata
service MetadataScraperService {
  rpc CanHandle(CanHandleRequest) returns (CanHandleResponse);
  rpc ExtractMetadata(ExtractMetadataRequest) returns (ExtractMetadataResponse);
  rpc GetSupportedTypes(GetSupportedTypesRequest) returns (GetSupportedTypesResponse);
}

// Scanner hook service for plugins that hook into the scanner
service ScannerHookService {
  rpc OnMediaFileScanned(OnMediaFileScannedRequest) returns (OnMediaFileScannedResponse);
  rpc OnScanStarted(OnScanStartedRequest) returns (OnScanStartedResponse);
  rpc OnScanCompleted(OnScanCompletedRequest) returns (OnScanCompletedResponse);
}

// Asset service for plugins that need to save assets (images, etc.)
service AssetService {
  rpc SaveAsset(SaveAssetRequest) returns (SaveAssetResponse);
  rpc AssetExists(AssetExistsRequest) returns (AssetExistsResponse);
  rpc RemoveAsset(RemoveAssetRequest) returns (RemoveAssetResponse);
}

// Database service for plugins that need database access
service DatabaseService {
  rpc GetModels(GetModelsRequest) returns (GetModelsResponse);
  rpc Migrate(MigrateRequest) returns (MigrateResponse);
  rpc Rollback(RollbackRequest) returns (RollbackResponse);
}

// Admin page service for plugins that provide admin interfaces
service AdminPageService {
  rpc GetAdminPages(GetAdminPagesRequest) returns (GetAdminPagesResponse);
  rpc RegisterRoutes(RegisterRoutesRequest) returns (RegisterRoutesResponse);
}

// APIRoute message for route registration
message APIRoute {
  string path = 1;
  string method = 2;
  string description = 3;
  // string plugin_id = 4; // Plugin ID will be known by the manager
}

// APIRegistrationService allows plugins to register their API routes with the host.
service APIRegistrationService {
  // GetRegisteredRoutes returns a list of API routes the plugin wishes to register.
  // The host application will typically prefix these routes, e.g., /api/plugins/<plugin-id>/<route.path>
  rpc GetRegisteredRoutes(GetRegisteredRoutesRequest) returns (GetRegisteredRoutesResponse);
}

// SearchService allows plugins to provide search functionality
service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc GetSearchCapabilities(GetSearchCapabilitiesRequest) returns (GetSearchCapabilitiesResponse);
}

message GetRegisteredRoutesRequest {}

message GetRegisteredRoutesResponse {
  repeated APIRoute routes = 1;
}

// Asset service messages
message SaveAssetRequest {
  string media_file_id = 1;           // Changed from uint32 to string for UUID support
  string asset_type = 2;              // "music", "video", etc.
  string category = 3;                // "album", "artist", etc.
  string subtype = 4;                 // "artwork", "poster", etc.
  bytes data = 5;                     // The actual asset data
  string mime_type = 6;               // MIME type of the asset
  string source_url = 7;              // Original URL if downloaded
  map<string, string> metadata = 8;   // Additional metadata (width, height, etc.)
  string plugin_id = 9;               // Plugin identifier for asset tracking
}

message SaveAssetResponse {
  bool success = 1;
  string error = 2;
  uint32 asset_id = 3;                // ID of the saved asset
  string hash = 4;                    // Hash of the saved asset
  string relative_path = 5;           // Path where asset was saved
}

message AssetExistsRequest {
  string media_file_id = 1;           // Changed from uint32 to string for UUID support
  string asset_type = 2;
  string category = 3;
  string subtype = 4;
  string hash = 5;                    // Optional: check by hash
}

message AssetExistsResponse {
  bool exists = 1;
  uint32 asset_id = 2;             // ID if exists
  string relative_path = 3;        // Path if exists
}

message RemoveAssetRequest {
  uint32 asset_id = 1;
}

message RemoveAssetResponse {
  bool success = 1;
  string error = 2;
}

// Search service messages
message SearchRequest {
  map<string, string> query = 1;  // Flexible query parameters (title, artist, album, etc.)
  uint32 limit = 2;               // Maximum number of results
  uint32 offset = 3;              // Offset for pagination
}

message SearchResponse {
  bool success = 1;
  string error = 2;
  repeated SearchResult results = 3;
  uint32 total_count = 4;         // Total results available
  bool has_more = 5;              // Whether more results are available
}

message SearchResult {
  string id = 1;                  // Unique identifier (e.g., MusicBrainz ID)
  string title = 2;               // Track/item title
  string artist = 3;              // Artist name
  string album = 4;               // Album name
  double score = 5;               // Match confidence score (0.0-1.0)
  map<string, string> metadata = 6; // Additional metadata
}

message GetSearchCapabilitiesRequest {
  // Empty for now
}

message GetSearchCapabilitiesResponse {
  repeated string supported_fields = 1;  // Fields that can be searched (title, artist, album, etc.)
  bool supports_pagination = 2;          // Whether pagination is supported
  uint32 max_results = 3;                // Maximum results per search
}

// Core plugin interface messages
message InitializeRequest {
  PluginContext context = 1;
}

message InitializeResponse {
  bool success = 1;
  string error = 2;
}

message StartRequest {
  // Empty for now, may include context in future
}

message StartResponse {
  bool success = 1;
  string error = 2;
}

message StopRequest {
  // Empty for now
}

message StopResponse {
  bool success = 1;
  string error = 2;
}

message InfoRequest {
  // Empty for now
}

message InfoResponse {
  PluginInfo info = 1;
}

message HealthRequest {
  // Empty for now
}

message HealthResponse {
  bool healthy = 1;
  string error = 2;
}

// Metadata scraper messages
message CanHandleRequest {
  string file_path = 1;
  string mime_type = 2;
}

message CanHandleResponse {
  bool can_handle = 1;
}

message ExtractMetadataRequest {
  string file_path = 1;
}

message ExtractMetadataResponse {
  map<string, string> metadata = 1;
  string error = 2;
}

message GetSupportedTypesRequest {
  // Empty for now
}

message GetSupportedTypesResponse {
  repeated string types = 1;
}

// Scanner hook messages
message OnMediaFileScannedRequest {
  string media_file_id = 1;           // Changed from uint32 to string for UUID support
  string file_path = 2;
  map<string, string> metadata = 3;
}

message OnMediaFileScannedResponse {}

message OnScanStartedRequest {
  uint32 scan_job_id = 1;
  uint32 library_id = 2;
  string library_path = 3;
}

message OnScanStartedResponse {}

message OnScanCompletedRequest {
  uint32 scan_job_id = 1;
  uint32 library_id = 2;
  map<string, string> stats = 3;
}

message OnScanCompletedResponse {}

// Database messages
message GetModelsRequest {
  // Empty for now
}

message GetModelsResponse {
  repeated string model_names = 1;
}

message MigrateRequest {
  string connection_string = 1;
}

message MigrateResponse {
  bool success = 1;
  string error = 2;
}

message RollbackRequest {
  string connection_string = 1;
}

message RollbackResponse {
  bool success = 1;
  string error = 2;
}

// Admin page messages
message GetAdminPagesRequest {
  // Empty for now
}

message GetAdminPagesResponse {
  repeated AdminPageConfig pages = 1;
}

message RegisterRoutesRequest {
  string base_path = 1;
}

message RegisterRoutesResponse {
  bool success = 1;
  string error = 2;
}

// Common data structures
message PluginContext {
  string plugin_id = 1;
  map<string, string> config = 2;
  string log_level = 3;
  string database_url = 4;
  string base_path = 5;
  string host_service_addr = 6;  // Address of host's gRPC server for bidirectional communication
  string plugin_base_path = 7;   // Plugin-specific base path for plugin files and data
}

message PluginInfo {
  string id = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  string author = 5;
  string website = 6;
  string repository = 7;
  string license = 8;
  string type = 9;
  repeated string tags = 10;
  string status = 11;
  string install_path = 12;
  int64 created_at = 13;
  int64 updated_at = 14;
}

message AdminPageConfig {
  string id = 1;
  string title = 2;
  string path = 3;
  string icon = 4;
  string category = 5;
  string url = 6;
  string type = 7;
}

// Transcoding service for video/audio transcoding plugins
service TranscodingService {
  rpc GetCapabilities(GetCapabilitiesRequest) returns (GetCapabilitiesResponse);
  rpc StartTranscode(StartTranscodeRequest) returns (StartTranscodeResponse);
  rpc GetTranscodeSession(GetTranscodeSessionRequest) returns (GetTranscodeSessionResponse);
  rpc StopTranscode(StopTranscodeRequest) returns (StopTranscodeResponse);
  rpc ListActiveSessions(ListActiveSessionsRequest) returns (ListActiveSessionsResponse);
  rpc GetTranscodeStream(GetTranscodeStreamRequest) returns (stream TranscodeStreamChunk);
}

// Transcoding capabilities message
message TranscodingCapabilities {
  string name = 1;
  repeated string supported_codecs = 2;
  repeated string supported_resolutions = 3;
  repeated string supported_containers = 4;
  bool hardware_acceleration = 5;
  int32 max_concurrent_sessions = 6;
  TranscodingFeatures features = 7;
  int32 priority = 8;
}

message TranscodingFeatures {
  bool subtitle_burn_in = 1;
  bool subtitle_passthrough = 2;
  bool multi_audio_tracks = 3;
  bool hdr_support = 4;
  bool tone_mapping = 5;
  bool streaming_output = 6;
  bool segmented_output = 7;
}

// Transcoding request/response messages
message GetCapabilitiesRequest {}

message GetCapabilitiesResponse {
  TranscodingCapabilities capabilities = 1;
  string error = 2;
}

message StartTranscodeRequest {
  TranscodeRequest request = 1;
}

message StartTranscodeResponse {
  TranscodeSession session = 1;
  string error = 2;
}

message GetTranscodeSessionRequest {
  string session_id = 1;
}

message GetTranscodeSessionResponse {
  TranscodeSession session = 1;
  string error = 2;
}

message StopTranscodeRequest {
  string session_id = 1;
}

message StopTranscodeResponse {
  bool success = 1;
  string error = 2;
}

message ListActiveSessionsRequest {}

message ListActiveSessionsResponse {
  repeated TranscodeSession sessions = 1;
  string error = 2;
}

message GetTranscodeStreamRequest {
  string session_id = 1;
}

message TranscodeStreamChunk {
  bytes data = 1;
  bool eof = 2;
  string error = 3;
}

// Core transcoding data structures
message TranscodeRequest {
  string input_path = 1;
  string target_codec = 2;
  string target_container = 3;
  string resolution = 4;
  int32 bitrate = 5;
  string audio_codec = 6;
  int32 audio_bitrate = 7;
  int32 audio_stream = 8;
  SubtitleConfig subtitles = 9;
  int32 quality = 10;
  string preset = 11;
  map<string, string> options = 12;
  DeviceProfile device_profile = 13;
  int32 priority = 14;
}

message SubtitleConfig {
  bool enabled = 1;
  string language = 2;
  bool burn_in = 3;
  int32 stream_idx = 4;
  int32 font_size = 5;
  string font_color = 6;
}

message DeviceProfile {
  string user_agent = 1;
  repeated string supported_codecs = 2;
  string max_resolution = 3;
  int32 max_bitrate = 4;
  bool supports_hevc = 5;
  bool supports_av1 = 6;
  bool supports_hdr = 7;
  string client_ip = 8;
  string platform = 9;
  string browser = 10;
}

message TranscodeSession {
  string id = 1;
  TranscodeRequest request = 2;
  string status = 3; // pending, starting, running, completed, failed, cancelled
  double progress = 4;
  int64 start_time = 5; // Unix timestamp
  int64 end_time = 6;   // Unix timestamp, optional
  string backend = 7;
  string error = 8;
  TranscodeStats stats = 9;
  map<string, string> metadata = 10;
}

message TranscodeStats {
  int64 duration = 1;        // Duration in nanoseconds
  int64 bytes_processed = 2;
  int64 bytes_generated = 3;
  int64 frames_processed = 4;
  double current_fps = 5;
  double average_fps = 6;
  double cpu_usage = 7;
  int64 memory_usage = 8;
  double speed = 9;          // Transcoding speed multiplier
} 